make readings prettier

--- a/_sass/custom/card.scss
+++ b/_sass/custom/card.scss
@@ -56,7 +56,10 @@
       background-color: $blue-100;
       color: white;
     }
-
+    &.label-reading {
+      background-color: $green-100;
+      color: white;
+    }
     
   }
 }
