readings style update

--- a/_sass/custom/card.scss
+++ b/_sass/custom/card.scss
@@ -49,7 +49,7 @@
       color: white;
     }
     &.label-survey {
-      background-color: $blue-100;
+      background-color: $purple-100;
       color: white;
     }
     &.label-project {
